feature:修改统计接口 & 调度接口