@@ -2,17 +2,17 @@ package com.example.zdtx.service.impl;
 
 import cn.hutool.core.bean.BeanUtil;
 import cn.hutool.core.bean.copier.CopyOptions;
-import cn.hutool.json.JSONObject;
-import cn.hutool.json.JSONUtil;
 import com.example.zdtx.domain.dto.instruction.InstructionAddDTO;
 import com.example.zdtx.domain.dto.instruction.InstructionCancelDTO;
 import com.example.zdtx.domain.dto.instruction.InstructionQueryDTO;
 import com.example.zdtx.domain.entity.Result;
 import com.example.zdtx.domain.vo.InstructionExVO;
 import com.example.zdtx.service.InstructionServcie;
-import com.example.zdtx.utils.HttpUtils;
 import lombok.RequiredArgsConstructor;
+import org.springframework.dao.DataAccessException;
 import org.springframework.data.redis.core.RedisCallback;
+import org.springframework.data.redis.core.RedisOperations;
+import org.springframework.data.redis.core.SessionCallback;
 import org.springframework.data.redis.core.StringRedisTemplate;
 import org.springframework.data.redis.serializer.StringRedisSerializer;
 import org.springframework.stereotype.Service;
@@ -22,10 +22,12 @@ import java.time.format.DateTimeFormatter;
 import java.util.*;
 
 import static com.example.zdtx.constants.RedisConstants.*;
+
 /**
- * InstructionServcieImpl
- * - 产出本轮调度顺序：优先级优先 -> 尽量少冲突 -> 兼顾等待时间 & 历史时长/波动
- * - 不做资源加锁，只返回排序后的列表
+ * 指令调度实现：
+ * 1. 按优先级 + 等待时间 + 历史耗时打分排序
+ * 2. 在一轮调度内，用本地 nodePlan 模拟各终点的占用情况，决定本轮 ready / deferred
+ * 3. 不做加锁，只给出排序结果
  */
 @Service
 @RequiredArgsConstructor
@@ -33,46 +35,54 @@ public class InstructionServcieImpl implements InstructionServcie {
 
     private final StringRedisTemplate stringRedisTemplate;
 
-    // ===================== 调度权重 & 历史项 =====================
+    // ===================== 调度打分相关 =====================
 
-    /** 基础权重 */
-    private static final int Wp = 1000;  // 优先级权重（主导）
-    private static final int Ww = 5;     // 等待时间(分钟)权重（防饿）
-    private static final int Wc = 80;    // 冲突惩罚总权重（越大越偏好少冲突序列）
+    // 优先级、等待时间权重
+    private static final int Wp = 1000;  // priority 权重
+    private static final int Ww = 5;     // 等待时间(分钟) 权重
 
-    /** 路径重叠惩罚 */
-    private static final int PcOpp = 5;  // 与队尾比较时，反向重叠的单段惩罚
-    private static final int PcSame = 1; // 与队尾比较时，同向重叠的轻微惩罚（0或-1作为奖励）
-    private static final int LOOKBACK = 3; // 与队尾最近几条比较
+    // 历史耗时（来自 stats:od:FROM|TO）
+    private static final double Wt = 0.01;  // 把毫秒缩放成分数
+    private static final double K  = 1.0;   // mean + K*std
 
-    /** 历史期望耗时 + 风险溢价（来自 stats:od:FROM|TO） */
-    private static final double Wt = 0.01;      // 历史耗时惩罚权重（把毫秒量纲缩放到分值）
-    private static final double K  = 1.0;       // 风险厌恶：对 std 的加权（mean + K*std）
+    // OD 统计冷启动
+    private static final long DEFAULT_OD_MEAN_MS = 12000L;
+    private static final long DEFAULT_OD_STD_MS  = 2000L;
+    private static final long WARMUP_N           = 5;
 
-    /** 冷启动兜底（没统计或样本很少时） */
-    private static final long DEFAULT_OD_MEAN_MS = 12000L; // 无历史时的默认期望耗时（按现场节拍调）
-    private static final long DEFAULT_OD_STD_MS  = 2000L;  // 无历史时的默认波动
-    private static final long WARMUP_N = 5;                  // 样本少于 N 次时退火减弱历史项影响
+    // ===================== 节点预估可用时间 =====================
 
-    // ===================== 对外基础接口（与你原来一致） =====================
+    // 每个终点的预计“可再接任务”的时间
+    private static final String NODE_AVAILABLE_PREFIX = "node:available:";
+
+    // 没历史数据时的默认行驶时间
+    private static final long DEFAULT_TRAVEL_MS = DEFAULT_OD_MEAN_MS;
+
+    // 到站后的处理时间（简单用常量，后面可以再细化）
+    private static final long DEFAULT_PROCESS_MS = 10000L;
+
+    // 允许稍微提前一点的裕量
+    private static final long SAFE_EARLY_ARRIVE_MS = 5000L;
+
+    // ===================== 对外接口 =====================
 
     @Override
     public Result<Boolean> addInstruction(InstructionAddDTO requestparm) {
         System.out.println();
-        System.out.println("[" + getCurrentTimestamp() + "]addInstruction 方法被调用");
+        System.out.println("[" + getCurrentTimestamp() + "] addInstruction 调用");
         if (requestparm == null) {
             return Result.error("指令为空");
         }
-        System.out.println("[" + getCurrentTimestamp() + "]开始将指令\n" + requestparm +  "\n添加到等待队列");
+        System.out.println("[" + getCurrentTimestamp() + "] 开始入队指令：" + requestparm);
 
-        // 1) 进等待队列（score 用优先级；批量接口已用 p*1e13 - now）
+        // 1) 写入等待队列（score 暂用优先级）
         stringRedisTemplate.opsForZSet().add(
                 TASK_WAITING_ZSET,
                 requestparm.getInstructionCode(),
                 requestparm.getPriority()
         );
 
-        // 2) DTO -> Map，并把 value 全部转成 String
+        // 2) DTO -> Map，全部转成 String 存 Hash
         Map<String, Object> raw = BeanUtil.beanToMap(
                 requestparm,
                 new HashMap<>(),
@@ -85,13 +95,13 @@ public class InstructionServcieImpl implements InstructionServcie {
         raw.forEach((k, v) -> {
             if (v != null) strMap.put(k, String.valueOf(v));
         });
-        // 建议写入 enqueueAt 供等待时长计算
+        // 入队时间，后续算等待用
         strMap.putIfAbsent("enqueueAt", String.valueOf(System.currentTimeMillis()));
 
-        // 3) 写入 Hash（key、field、value 都是 String）
         String infoKey = TASK_INFO + requestparm.getInstructionCode();
         stringRedisTemplate.opsForHash().putAll(infoKey, strMap);
-        System.out.println("[" + getCurrentTimestamp() + "]指令" + requestparm.getInstructionCode() + "添加成功");
+
+        System.out.println("[" + getCurrentTimestamp() + "] 指令 " + requestparm.getInstructionCode() + " 入队完成");
         return Result.success(Boolean.TRUE, "添加成功");
     }
 
@@ -100,7 +110,8 @@ public class InstructionServcieImpl implements InstructionServcie {
         if (requestparm == null || requestparm.isEmpty()) {
             return Result.success();
         }
-        // 批量入队
+
+        // 批量入队：zset + hash
         stringRedisTemplate.executePipelined((RedisCallback<Object>) connection -> {
             StringRedisSerializer keySer = new StringRedisSerializer();
             StringRedisSerializer valSer = new StringRedisSerializer();
@@ -108,9 +119,9 @@ public class InstructionServcieImpl implements InstructionServcie {
             for (InstructionAddDTO dto : requestparm) {
                 String code = dto.getInstructionCode();
                 long now = System.currentTimeMillis();
-                double score = dto.getPriority() * 1e13 - now; // 先优先级，再先来后到
+                // score = priority + 轻量的先来后到
+                double score = dto.getPriority() * 1e13 - now;
 
-                // ZADD task:waiting
                 connection.zAdd(
                         Objects.requireNonNull(keySer.serialize(TASK_WAITING_ZSET)),
                         score,
@@ -130,6 +141,7 @@ public class InstructionServcieImpl implements InstructionServcie {
                         keySer.serialize(k),
                         valSer.serialize(String.valueOf(v))
                 ));
+
                 connection.hMSet(
                         Objects.requireNonNull(keySer.serialize(infoKey)),
                         hash
@@ -141,272 +153,237 @@ public class InstructionServcieImpl implements InstructionServcie {
     }
 
     @Override
-    public Result<Void> cancelInstruction(InstructionCancelDTO requestparm) {
+    public Result<String> cancelInstruction(InstructionCancelDTO requestparm) {
         System.out.println();
-        System.out.println("[" + getCurrentTimestamp() + "]cancelInstruction 方法被调用");
+        System.out.println("[" + getCurrentTimestamp() + "] cancelInstruction 调用");
         String instructionCode = requestparm.getInstructionCode();
         Double score = stringRedisTemplate.opsForZSet().score(TASK_WAITING_ZSET, instructionCode);
-        if(score == null){
-            System.out.println("[" + getCurrentTimestamp() + "]指令 " + instructionCode + " 已经启动，无法取消");
-            return Result.error("指令已经启动");
+
+        // 不在等待队列里，视作已经启动
+        if (score == null) {
+            return Result.success("指令已经启动", "指令" + instructionCode + "取消成功");
         }
+
         stringRedisTemplate.opsForZSet().remove(TASK_WAITING_ZSET, instructionCode);
         String infoKey = TASK_INFO + instructionCode;
         stringRedisTemplate.delete(infoKey);
-        System.out.println("[" + getCurrentTimestamp() + "]指令 " + instructionCode + " 取消成功");
-        return Result.success("指令" + instructionCode + "取消成功");
+        System.out.println("[" + getCurrentTimestamp() + "] 指令 " + instructionCode + " 取消完成");
+        return Result.success("指令未启动", "指令" + instructionCode + "取消成功");
     }
 
     @Override
     public Boolean queryInstruction(InstructionQueryDTO requestparm) {
-        //向上游系统查询这个指令是否可以被释放
+        // 与上游对接时再实现，这里先默认都可下发
         return true;
-        //TODO: wait url zdtx
-//        String url = "xxxx";
-//        String s = HttpUtils.postForm(url, BeanUtil.beanToMap(
-//                requestparm,
-//                new HashMap<>(),
-//                CopyOptions.create().ignoreNullValue()
-//        ));
-//        JSONObject json = JSONUtil.parseObj(s);
-//        int code = json.getInt("responseCode");
-//        if (code != 0) {
-//            throw new RuntimeException("查询指令状态失败: " + json.getStr("responseMessage"));
-//        }
-//        return json.getBool("status", true);
     }
 
     @Override
     public Result<List<InstructionExVO>> getInstructions() throws InterruptedException {
         System.out.println();
-        System.out.println("[" + getCurrentTimestamp() + "] getInstructions 方法被调用");
-        System.out.println("[" + getCurrentTimestamp() + "] 进入指令调度");
+        System.out.println("[" + getCurrentTimestamp() + "] getInstructions 调用");
+        System.out.println("[" + getCurrentTimestamp() + "] 开始调度");
 
-        // 1) 按调度获取待执行指令
+        // 1) 按打分拿一批候选指令
         List<InstructionExVO> scheduled = getInstructionsBySchedule(MAX_TASK);
-
         if (scheduled == null || scheduled.isEmpty()) {
-            System.out.println("[" + getCurrentTimestamp() + "] 暂无待执行的指令");
+            System.out.println("[" + getCurrentTimestamp() + "] 当前没有待执行指令");
             return Result.success(Collections.emptyList(), "暂无待执行的指令");
         }
 
-        // 2) 询问（校验）可执行性，将不可立即执行的指令移动到队尾
+        // 2) 按顺序逐个尝试：上游是否允许 + 按本轮节点占用计划判断是否能发
         List<InstructionExVO> ready = new ArrayList<>(scheduled.size());
         List<InstructionExVO> deferred = new ArrayList<>();
+        final long now = System.currentTimeMillis();
+
+        // 本轮调度用的“节点可用时间计划”，只在内存里维护
+        Map<String, Long> nodePlan = new HashMap<>();
 
         for (InstructionExVO vo : scheduled) {
-            Boolean can = queryInstruction(
+            Boolean upstreamOk = queryInstruction(
                     new InstructionQueryDTO(vo.getLocationFrom(), vo.getLocationTo())
             );
-            if (Boolean.TRUE.equals(can)) {
+
+            boolean etaOk = canArriveWhenNodeFreeInPlan(vo, now, nodePlan);
+
+            if (Boolean.TRUE.equals(upstreamOk) && etaOk) {
                 ready.add(vo);
             } else {
                 deferred.add(vo);
             }
         }
 
-        // 3) 重新组装顺序：可执行在前，顺延在后（保持各自相对顺序稳定）
+        // 3) ready 在前，deferred 在后
         List<InstructionExVO> ordered = new ArrayList<>(ready.size() + deferred.size());
         ordered.addAll(ready);
         ordered.addAll(deferred);
 
-        // 为能够进行的记录启动时间
-        final long now = System.currentTimeMillis();
-        ready.forEach(
-                instruction -> {
-                    String code = instruction.getInstructionCode();
-                    String key = TASK_COMPLETED_SET + code;
-                    System.out.println("[" + ts() + "]尝试写入启动时间：key = " + key + "，时间 = " + now);
+        // 4) 对 ready 的任务记录启动时间，并把终点的“预计可用时间”写回 Redis
+        ready.forEach(instruction -> {
+            String code = instruction.getInstructionCode();
+            String key = TASK_COMPLETED_SET + code;
+            System.out.println("[" + ts() + "] 记录启动时间：key = " + key + "，时间 = " + now);
 
-                    // 尝试写入“启动时间” ===
-                    Boolean firstStart = stringRedisTemplate.opsForValue()
-                            .setIfAbsent(key, String.valueOf(now));
-                    Double score = stringRedisTemplate.opsForZSet().score(TASK_WAITING_ZSET, code);
-                    if (Boolean.TRUE.equals(firstStart) && score != null) {
-                        // 启动：从等待队列移除该成员，并清理详情（如果有）
-                        stringRedisTemplate.opsForZSet().remove(TASK_WAITING_ZSET, code);
-                        stringRedisTemplate.delete(TASK_INFO + code);
-                        System.out.println("[" + ts() + "]启动时间记录成功，移除等待队列中的指令，并清理详情");
-                    }
-                }
-        );
+            Boolean firstStart = stringRedisTemplate.opsForValue()
+                    .setIfAbsent(key, String.valueOf(now));
+            Double score = stringRedisTemplate.opsForZSet().score(TASK_WAITING_ZSET, code);
+            if (Boolean.TRUE.equals(firstStart) && score != null) {
+                // 起调成功：从等待队列移除，清理详情
+                stringRedisTemplate.opsForZSet().remove(TASK_WAITING_ZSET, code);
+                stringRedisTemplate.delete(TASK_INFO + code);
+                System.out.println("[" + ts() + "] 启动时间已写入，已从等待队列移除");
 
-        // 4) 日志与返回
-        System.out.println("[" + getCurrentTimestamp() + "] 获取到待执行的指令："
-                + ordered.size() + " 条（可立即执行：" + ready.size() + "，顺延：" + deferred.size() + "）");
-        System.out.println("具体为:");
+                // 粗略估算终点节点忙到什么时候，给下一轮参考
+                String from = instruction.getLocationFrom();
+                String to   = instruction.getLocationTo();
+                long travelMs = estimateTravelMs(from, to);
+                long processMs = DEFAULT_PROCESS_MS;
+                long availableAt = now + travelMs + processMs;
+
+                String nodeKey = NODE_AVAILABLE_PREFIX + to.trim().toUpperCase();
+                stringRedisTemplate.opsForValue().set(nodeKey, String.valueOf(availableAt));
+            }
+        });
+
+        // 5) 日志与返回
+        System.out.println("[" + getCurrentTimestamp() + "] 本轮调度结果：共 "
+                + ordered.size() + " 条（ready=" + ready.size() + "，deferred=" + deferred.size() + "）");
+        System.out.println("详情：");
         System.out.println(ordered);
 
         return Result.success(ordered, "获取成功");
     }
 
+    // ===================== ETA + 节点占用判断 =====================
 
-    public List<InstructionExVO> getInstructionsBySchedule(int size) {
-        if (size <= 0) return Collections.emptyList();
-
-        // 1) 候选取自等待队列（分数高在前）。如需窗口可把 -1 换为 windowSize-1
-        Set<String> candidates = stringRedisTemplate.opsForZSet()
-                .reverseRange(TASK_WAITING_ZSET, 0, -1);
-        if (candidates == null || candidates.isEmpty()) {
-            return Collections.emptyList();
+    /**
+     * 在本轮调度的节点占用计划上判断：
+     * 如果现在发这条任务，到终点时大致是否空闲。
+     * 若可以发，则顺带把 nodePlan 里该终点的可用时间往后推一段。
+     */
+    private boolean canArriveWhenNodeFreeInPlan(InstructionExVO vo,
+                                                long now,
+                                                Map<String, Long> nodePlan) {
+        String from = vo.getLocationFrom();
+        String to   = vo.getLocationTo();
+        if (from == null || to == null) {
+            // 信息不完整时先不拦
+            return true;
         }
 
-        // 用 List 保持顺序，pipeline 的返回与此一一对应
-        final List<String> codes = new ArrayList<>(candidates);
+        String nodeKey = to.trim().toUpperCase();
 
-        // 2) pipeline 批量 HGETALL，结果就是 Map<Object,Object>
-        final List<Object> results = stringRedisTemplate.executePipelined(
-                new org.springframework.data.redis.core.SessionCallback<Object>() {
-                    @Override
-                    public Object execute(org.springframework.data.redis.core.RedisOperations operations)
-                            throws org.springframework.dao.DataAccessException {
-                        for (String code : codes) {
-                            operations.opsForHash().entries(TASK_INFO + code);
-                        }
-                        return null; // 返回 null 才会把 pipeline 结果带出来
-                    }
-                }
-        );
+        // 1) 预估行驶时间 + ETA
+        long travelMs = estimateTravelMs(from, to);
+        long eta = now + travelMs;
 
-        final int n = codes.size();
-        final List<InstructionExVO> list = new ArrayList<>(n);
+        // 2) 真实的节点可用时间（上一轮留下的），从 Redis 读一次
+        long realAvailable = getNodeAvailableAt(nodeKey, now);
 
-        for (int i = 0; i < n; i++) {
-            String code = codes.get(i);
-            Map<Object, Object> m = null;
-            if (results != null && i < results.size() && results.get(i) instanceof Map) {
-                @SuppressWarnings("unchecked")
-                Map<Object, Object> tmp = (Map<Object, Object>) results.get(i);
-                m = tmp;
-            }
+        // 3) 本轮前面已经“预占”的时间（如果有就用 plan，没有就用 real）
+        long planned = nodePlan.getOrDefault(nodeKey, realAvailable);
 
-            InstructionExVO vo = new InstructionExVO();
-            vo.setInstructionCode(code);
+        long nodeAvailableAt = Math.max(realAvailable, planned);
 
-            if (m != null && !m.isEmpty()) {
-                vo.setLocationFrom((String) m.get("locationFrom"));
-                vo.setLocationTo((String) m.get("locationTo"));
-                Object p = m.get("priority");
-                if (p != null) {
-                    try { vo.setPriority(Integer.valueOf(p.toString())); } catch (NumberFormatException ignore) {}
-                }
-            }
-            list.add(vo);
+        // 4) 如果 ETA + buffer 还早于可用时间，说明这趟去会在那边干等，先不发
+        boolean ok = eta + SAFE_EARLY_ARRIVE_MS >= nodeAvailableAt;
+        if (ok) {
+            long processMs = DEFAULT_PROCESS_MS;
+            long newAvailable = eta + processMs;
+            nodePlan.put(nodeKey, newAvailable);
         }
-
-        // 3) 调度算法：优先级 + 等待时间 + 历史项 + 最小冲突（纯内存，不加锁）
-        schedule(list);
-
-        // 4) 返回
-        return list;
+        return ok;
     }
 
-    @Override
-    public Result<Void> clear() {
-        System.out.println();
-        System.out.println("[" + getCurrentTimestamp() + "]clear 方法被调用");
-        String pattern = "*";
-        Set<String> keys = stringRedisTemplate.keys(pattern);
-        if (keys != null && !keys.isEmpty()) {
-            stringRedisTemplate.delete(keys);
+    /**
+     * 读取终点预计“可接下一单”的时间，没有数据则视为“现在就可以”
+     */
+    private long getNodeAvailableAt(String node, long now) {
+        if (node == null) return now;
+        String key = NODE_AVAILABLE_PREFIX + node.trim().toUpperCase();
+        String v = stringRedisTemplate.opsForValue().get(key);
+        if (v == null) return now;
+        try {
+            return Long.parseLong(v);
+        } catch (Exception e) {
+            return now;
         }
-        System.out.println("[" + getCurrentTimestamp() + "]Redis 清理完成");
-        return Result.success();
     }
 
-    private String getCurrentTimestamp() {
-        LocalDateTime now = LocalDateTime.now();
-        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
-        return now.format(formatter);
+    /**
+     * 估算 from -> to 的行驶时间（毫秒），先看 OD 统计，没有就用默认
+     */
+    private long estimateTravelMs(String from, String to) {
+        if (from == null || to == null) {
+            return DEFAULT_TRAVEL_MS;
+        }
+        String key = "stats:od:" + from.trim().toUpperCase() + "|" + to.trim().toUpperCase();
+        Object meanStr = stringRedisTemplate.opsForHash().get(key, "mean_ms");
+        if (meanStr == null) {
+            return DEFAULT_TRAVEL_MS;
+        }
+        try {
+            return (long) Double.parseDouble(String.valueOf(meanStr));
+        } catch (Exception e) {
+            return DEFAULT_TRAVEL_MS;
+        }
     }
 
-// ===================== 调度核心：评分 & 序列化 =====================
+    // ===================== 调度核心：打分排序 =====================
 
-    /** 纯内存“最小冲突序列化”：优先级/等待 -> 历史项 -> 冲突，贪心生成顺序 */
+    /**
+     * 按优先级 + 等待时间 - 历史耗时 打分，直接排序
+     */
     private void schedule(List<InstructionExVO> candidates) {
-        final long now = System.currentTimeMillis();
+        if (candidates == null || candidates.isEmpty()) {
+            return;
+        }
 
-        // 1) 准备扩展（等待、路径、历史项）
+        final long now = System.currentTimeMillis();
         Map<String, TaskCtx> ctx = new HashMap<>(candidates.size());
+
         for (InstructionExVO vo : candidates) {
             String code = vo.getInstructionCode();
             Map<Object, Object> m = stringRedisTemplate.opsForHash().entries(TASK_INFO + code);
 
             long enqueueAt = 0L;
             if (m != null && m.get("enqueueAt") != null) {
-                try { enqueueAt = Long.parseLong(String.valueOf(m.get("enqueueAt"))); } catch (Exception ignore) {}
+                try {
+                    enqueueAt = Long.parseLong(String.valueOf(m.get("enqueueAt")));
+                } catch (Exception ignore) {}
             } else {
-                // 兜底：如果没有 enqueueAt，可用 ZSCORE 近似反推（p*1e13 - now）
-                Double z = stringRedisTemplate.opsForZSet().score(TASK_WAITING_ZSET, code);
-                Integer p = vo.getPriority() == null ? 0 : vo.getPriority();
-                if (z != null) enqueueAt = (long)(p * 1e13 - z);
+                throw new RuntimeException("缺少 enqueueAt：" + code);
             }
-            long waitMin = Math.max(0, (now - enqueueAt) / 60_000);
+            long waitMin = Math.max(0, (now - enqueueAt) / 60000);
 
-            // 路径段（基于环路拓扑；多锚点会自动选最短）
-            List<Seg> path = computePathSegments(vo.getLocationFrom(), vo.getLocationTo());
+            int p = vo.getPriority() == null ? 0 : vo.getPriority();
 
-            // 历史期望耗时 + 风险（带冷启动退火；多锚点自动选最低历史代价）
             double histMs = historicalCostMs(vo.getLocationFrom(), vo.getLocationTo());
 
-            // 基准分：优先级主导 + 等待抬升 - 历史耗时/风险惩罚
-            int p = vo.getPriority() == null ? 0 : vo.getPriority();
-            double base = Wp * (double)p + Ww * (double)waitMin - Wt * histMs;
+            double base = Wp * (double) p
+                    + Ww * (double) waitMin
+                    - Wt * histMs;
 
-            ctx.put(code, new TaskCtx(vo, base, path, waitMin));
+            ctx.put(code, new TaskCtx(vo, base, waitMin));
         }
 
-        // 2) 贪心构造顺序：每步挑“base - Wc*conflictPenalty”最高者
-        List<InstructionExVO> ordered = new ArrayList<>(candidates.size());
-        Set<String> remaining = new LinkedHashSet<>();
-        for (InstructionExVO vo : candidates) remaining.add(vo.getInstructionCode());
-
-        while (!remaining.isEmpty()) {
-            String best = null;
-            double bestScore = -1e100;
-
-            for (String code : remaining) {
-                TaskCtx t = ctx.get(code);
-                double penalty = conflictPenalty(t, ordered, ctx);
-                double finalScore = t.baseScore - Wc * penalty;
-                if (finalScore > bestScore) {
-                    bestScore = finalScore;
-                    best = code;
-                }
-            }
-            ordered.add(ctx.get(best).vo);
-            remaining.remove(best);
-        }
-
-        candidates.clear();
-        candidates.addAll(ordered);
+        // 按得分从高到低排
+        candidates.sort((a, b) -> {
+            TaskCtx ca = ctx.get(a.getInstructionCode());
+            TaskCtx cb = ctx.get(b.getInstructionCode());
+            double sa = (ca == null ? 0 : ca.baseScore);
+            double sb = (cb == null ? 0 : cb.baseScore);
+            return Double.compare(sb, sa);
+        });
     }
 
-    /** 与队尾最近 LOOKBACK 条比较路径重叠：同向轻惩罚、反向重惩罚 */
-    private double conflictPenalty(TaskCtx cand, List<InstructionExVO> tail, Map<String, TaskCtx> ctx) {
-        if (tail.isEmpty()) return 0.0;
-        int from = Math.max(0, tail.size() - LOOKBACK);
-        double penalty = 0;
-
-        for (int i = from; i < tail.size(); i++) {
-            TaskCtx t = ctx.get(tail.get(i).getInstructionCode());
-            for (Seg s1 : cand.path) {
-                for (Seg s2 : t.path) {
-                    if (!s1.id.equals(s2.id)) continue;
-                    if (s1.dir == s2.dir) penalty += PcSame;
-                    else penalty += PcOpp;
-                }
-            }
-        }
-        return penalty;
-    }
-
-    /** 历史项：读取 stats:od:FROM|TO 的 mean/std/count；多锚点取“历史代价最低”的组合；无数据退火 */
+    /**
+     * 历史耗时：从 stats:od:FROM|TO 里拿 mean/std/count，按“代价最低”组合
+     */
     private double historicalCostMs(String from, String to) {
         List<String> fromAs = normalizeToGrayAnchors(from);
         List<String> toAs   = normalizeToGrayAnchors(to);
         if (fromAs.isEmpty() || toAs.isEmpty()) {
-            // 没法定位到主环锚点：不施加历史惩罚
+            // 映射不到主环，先不加惩罚
             return 0.0;
         }
 
@@ -429,7 +406,7 @@ public class InstructionServcieImpl implements InstructionServcie {
                 try { if (cntStr  != null) cnt  = Long.parseLong(String.valueOf(cntStr));      } catch (Exception ignore) {}
 
                 double base = mean + K * std;
-                double scale = Math.min(1.0, cnt / (double) Math.max(1, WARMUP_N)); // 冷启动退火
+                double scale = Math.min(1.0, cnt / (double) Math.max(1, WARMUP_N));
                 double cost = base * scale;
 
                 if (cost < best) best = cost;
@@ -438,35 +415,114 @@ public class InstructionServcieImpl implements InstructionServcie {
         return Double.isInfinite(best) ? 0.0 : best;
     }
 
-    /** 内部上下文 */
     private static class TaskCtx {
         final InstructionExVO vo;
         final double baseScore;
-        final List<Seg> path;
         final long waitMin;
-        TaskCtx(InstructionExVO vo, double baseScore, List<Seg> path, long waitMin) {
-            this.vo = vo; this.baseScore = baseScore; this.path = path; this.waitMin = waitMin;
+
+        TaskCtx(InstructionExVO vo, double baseScore, long waitMin) {
+            this.vo = vo;
+            this.baseScore = baseScore;
+            this.waitMin = waitMin;
         }
     }
 
-// ===================== 环路建模（灰色主环 + 出入口映射，支持多锚点） =====================
+    // ===================== 取候选、清理等 =====================
 
-    /** 段定义：id 为“无向段”(两端字母序拼接)，dir 表示方向（+1 顺时针，-1 逆时针） */
+    public List<InstructionExVO> getInstructionsBySchedule(int size) {
+        if (size <= 0) return Collections.emptyList();
+
+        // 从等待队列拿候选（分数高在前）
+        Set<String> candidates = stringRedisTemplate.opsForZSet()
+                .reverseRange(TASK_WAITING_ZSET, 0, -1);
+        if (candidates == null || candidates.isEmpty()) {
+            return Collections.emptyList();
+        }
+
+        List<String> codes = new ArrayList<>(candidates);
+
+        // pipeline 批量拿 Hash
+        List<Object> results = stringRedisTemplate.executePipelined(
+                new SessionCallback<Object>() {
+                    @Override
+                    @SuppressWarnings("unchecked")
+                    public Object execute(RedisOperations operations) throws DataAccessException {
+                        RedisOperations<String, String> ops =
+                                (RedisOperations<String, String>) operations;
+                        for (String code : codes) {
+                            ops.opsForHash().entries(TASK_INFO + code);
+                        }
+                        return null;
+                    }
+                }
+        );
+
+        int n = codes.size();
+        List<InstructionExVO> list = new ArrayList<>(n);
+
+        for (int i = 0; i < n; i++) {
+            String code = codes.get(i);
+            Map<Object, Object> m = null;
+            if (results != null && i < results.size() && results.get(i) instanceof Map) {
+                @SuppressWarnings("unchecked")
+                Map<Object, Object> tmp = (Map<Object, Object>) results.get(i);
+                m = tmp;
+            }
+
+            InstructionExVO vo = new InstructionExVO();
+            vo.setInstructionCode(code);
+
+            if (m != null && !m.isEmpty()) {
+                vo.setLocationFrom((String) m.get("locationFrom"));
+                vo.setLocationTo((String) m.get("locationTo"));
+                Object p = m.get("priority");
+                if (p != null) {
+                    try { vo.setPriority(Integer.valueOf(p.toString())); } catch (NumberFormatException ignore) {}
+                } else {
+                    vo.setPriority(1);
+                }
+                vo.setContainerCode((String) m.get("containerCode"));
+            }
+            list.add(vo);
+        }
+
+        // 内存里按打分排一遍
+        schedule(list);
+        return list;
+    }
+
+    @Override
+    public Result<Void> clear() {
+        System.out.println();
+        System.out.println("[" + getCurrentTimestamp() + "] clear 调用");
+        String pattern = "*";
+        Set<String> keys = stringRedisTemplate.keys(pattern);
+        if (keys != null && !keys.isEmpty()) {
+            stringRedisTemplate.delete(keys);
+        }
+        System.out.println("[" + getCurrentTimestamp() + "] Redis 已清空");
+        return Result.success();
+    }
+
+    private String getCurrentTimestamp() {
+        LocalDateTime now = LocalDateTime.now();
+        DateTimeFormatter formatter = DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss");
+        return now.format(formatter);
+    }
+
+    // ===================== 环路建模（灰点 + 出入口映射） =====================
+
     public static class Seg {
-        public final String id;
-        public final int dir; // +1 顺时针，-1 逆时针
+        public final String id;  // 无向段 id
+        public final int dir;    // +1 顺时针，-1 逆时针
         public Seg(String id, int dir) { this.id = id; this.dir = dir; }
         @Override public String toString(){ return "Seg{id="+id+",dir="+dir+"}"; }
     }
 
-    /** 方向策略*/
     public enum DirectionPolicy {
         SHORTEST, CLOCKWISE, COUNTERCLOCKWISE
     }
 
-    /**
-     * 灰色主环顺时针顺序（传送带主环所有灰色节点，按顺时针依次列出）
-     */
     private static final List<String> RING = List.of(
             "G01","G02","G03","G04","G05","G06","G07","G08","G09","G10",
             "G11","G12","G13","G14","G15","G16","G17","G18","G19","G20",
@@ -477,80 +533,71 @@ public class InstructionServcieImpl implements InstructionServcie {
             "G61","G62","G63","G64","G65","G66","G67","G68"
     );
 
-    /**
-     * 出入口（彩色）节点 → 灰色主环节点的【一个或多个】锚点
-     */
     private static final Map<String, List<String>> ATTACH = new HashMap<String, List<String>>() {{
-        put("IN1_ENTRY",   Arrays.asList("G68"));  put("IN1_EXIT",   Arrays.asList("G68"));
-        put("OUT1_ENTRY",  Arrays.asList("G01"));  put("OUT1_EXIT",  Arrays.asList("G01"));
+        // 下排
+        put("30", List.of("G68"));
+        put("32", List.of("G66"));
+        put("33", List.of("G65"));
+        put("35", List.of("G63"));
+        put("36", List.of("G62"));
+        put("38", List.of("G62"));
+        put("39", List.of("G59"));
+        put("310", List.of("G57"));
+        put("311", List.of("G56"));
+        put("313", List.of("G54"));
+        put("314", List.of("G53"));
+        put("316", List.of("G51"));
+        put("318", List.of("G49"));
+        put("320", List.of("G47"));
+        put("321", List.of("G46"));
+        put("323", List.of("G44"));
+        put("324", List.of("G43"));
+        put("325", List.of("G41"));
+        put("326", List.of("G40"));
+        put("328", List.of("G38"));
 
-        put("IN2_ENTRY",   Arrays.asList("G65","G66"));
-        put("IN2_EXIT",    Arrays.asList("G65","G66"));
-        put("OUT2_ENTRY",  Arrays.asList("G04"));
-        put("OUT2_EXIT",   Arrays.asList("G04"));
-
-        put("IN3_ENTRY",   Arrays.asList("G63", "G62"));  put("IN3_EXIT", Arrays.asList("G63", "G62"));
-        put("OUT3_ENTRY",  Arrays.asList("G63", "G62"));  put("OUT3_EXIT", Arrays.asList("G63", "G62"));
-
-        put("IN4_ENTRY",   Arrays.asList("G59"));  put("IN4_EXIT",   Arrays.asList("G60"));
-        put("OUT4_ENTRY",  Arrays.asList("G10"));  put("OUT4_EXIT",  Arrays.asList("G10"));
-
-        put("IN5_ENTRY",   Arrays.asList("G57", "G56"));  put("IN5_EXIT", Arrays.asList("G57", "G56"));
-        put("OUT5_ENTRY",  Arrays.asList("G13"));  put("OUT5_EXIT",  Arrays.asList("G12"));
-
-        put("IN6_ENTRY",   Arrays.asList("G53"));  put("IN6_EXIT",   Arrays.asList("G54"));
-        put("OUT6_ENTRY",  Arrays.asList("G15"));  put("OUT6_EXIT",  Arrays.asList("G15"));
-
-        put("IN7_ENTRY",   Arrays.asList("G51"));  put("IN7_EXIT",   Arrays.asList("G51"));
-        put("OUT7_ENTRY",  Arrays.asList("G17"));  put("OUT7_EXIT",  Arrays.asList("G17"));
-
-        put("IN8_ENTRY",   Arrays.asList("G49"));  put("IN8_EXIT",   Arrays.asList("G49"));
-        put("OUT8_ENTRY",  Arrays.asList("G20"));  put("OUT8_EXIT",  Arrays.asList("G20"));
-
-        put("IN9_ENTRY",   Arrays.asList("G46"));  put("IN9_EXIT",   Arrays.asList("G47"));
-        put("OUT9_ENTRY",  Arrays.asList("G22"));  put("OUT9_EXIT",  Arrays.asList("G22"));
-
-        put("IN10_ENTRY",  Arrays.asList("G44", "G43"));  put("IN10_EXIT",  Arrays.asList("G44", "G43"));
-        put("OUT10_ENTRY", Arrays.asList("G24", "G25"));  put("OUT10_EXIT", Arrays.asList("G24", "G25"));
-
-        put("IN11_ENTRY",  Arrays.asList("G41", "G40"));  put("IN11_EXIT",  Arrays.asList("G41", "G40"));
-        put("OUT11_ENTRY", Arrays.asList("G26", "G27"));  put("OUT11_EXIT", Arrays.asList("G26", "G27"));
-
-        put("IN12_ENTRY",  Arrays.asList("G38"));  put("IN12_EXIT",  Arrays.asList("G38"));
+        // 上排
+        put("00", List.of("G01"));
+        put("03", List.of("G04"));
+        put("05", List.of("G06"));
+        put("09", List.of("G10"));
+        put("011", List.of("G12"));
+        put("012", List.of("G13"));
+        put("014", List.of("G15"));
+        put("016", List.of("G17"));
+        put("019", List.of("G20"));
+        put("021", List.of("G22"));
+        put("022", List.of("G23"));
+        put("024", List.of("G25"));
+        put("025", List.of("G26"));
+        put("027", List.of("G28"));
+        put("028", List.of("G29"));
     }};
 
-    /** 灰色主环节点索引缓存（统一大写） */
     private static final Map<String,Integer> POS = new HashMap<>();
     static {
         for (int i = 0; i < RING.size(); i++) POS.put(RING.get(i).toUpperCase(), i);
     }
 
-    /** 把任意业务名归一化为“一个或多个灰色锚点”；若本身是灰点名则返回单元素列表 */
     private static List<String> normalizeToGrayAnchors(String raw) {
         if (raw == null) return Collections.emptyList();
         String s = raw.trim().toUpperCase();
 
-        // 若本身就是灰点名（G01..G68），直接返回
         if (POS.containsKey(s)) return Collections.singletonList(s);
 
-        // 若是出入口名，返回配置的一个或多个锚点
         List<String> anchors = ATTACH.get(s);
         if (anchors != null && !anchors.isEmpty()) {
             List<String> list = new ArrayList<>(anchors.size());
             for (String a : anchors) list.add(a.toUpperCase());
             return list;
         }
-
-        // 未知：返回空
         return Collections.emptyList();
     }
 
-    /** 对外：计算 from→to 的段序列（在多个锚点组合中选“最短”，相等时顺时针） */
     private static List<Seg> computePathSegments(String from, String to) {
         return computePathSegments(from, to, DirectionPolicy.SHORTEST);
     }
 
-    /** 在起点候选×终点候选的所有组合里，挑最优路径（最短/顺时针/逆时针策略可选） */
     private static List<Seg> computePathSegments(String from, String to, DirectionPolicy policy) {
         List<String> fromAs = normalizeToGrayAnchors(from);
         List<String> toAs   = normalizeToGrayAnchors(to);
@@ -571,7 +618,6 @@ public class InstructionServcieImpl implements InstructionServcie {
         return best == null ? Collections.emptyList() : best;
     }
 
-    /** 只在两个“灰点”之间展开路径（保持你的顺/逆/最短逻辑） */
     private static List<Seg> pathBetweenGray(String fromGray, String toGray, DirectionPolicy policy) {
         Integer si = POS.get(fromGray);
         Integer ti = POS.get(toGray);
@@ -580,7 +626,6 @@ public class InstructionServcieImpl implements InstructionServcie {
         }
         int n = RING.size();
 
-        // 顺时针
         List<Seg> cw = new ArrayList<>();
         for (int i = si; i != ti; i = (i + 1) % n) {
             int j = (i + 1) % n;
@@ -589,7 +634,6 @@ public class InstructionServcieImpl implements InstructionServcie {
             cw.add(new Seg(undirected, +1));
         }
 
-        // 逆时针
         List<Seg> ccw = new ArrayList<>();
         for (int i = si; i != ti; i = (i - 1 + n) % n) {
             int j = (i - 1 + n) % n;
@@ -601,15 +645,14 @@ public class InstructionServcieImpl implements InstructionServcie {
         switch (policy) {
             case CLOCKWISE:        return cw;
             case COUNTERCLOCKWISE: return ccw;
-            default: return (ccw.size() < cw.size()) ? ccw : cw; // 最短；相等取顺时针
+            default: return (ccw.size() < cw.size()) ? ccw : cw;
         }
     }
 
     public static void main(String[] args) {
-        // 用 null 构造（本地测试不连 Redis）
+        // 本地测试用，不连 Redis 也能跑 schedule 和路径展开
         InstructionServcieImpl svc = new InstructionServcieImpl(null);
 
-        // 构造三条任务（你也可以改成真实的 IN/OUT 名）
         InstructionExVO t1 = new InstructionExVO();
         t1.setInstructionCode("T001");
         t1.setLocationFrom("IN1_EXIT");
@@ -618,13 +661,13 @@ public class InstructionServcieImpl implements InstructionServcie {
 
         InstructionExVO t2 = new InstructionExVO();
         t2.setInstructionCode("T002");
-        t2.setLocationFrom("IN2_EXIT");     // 演示“多锚点”的入口
+        t2.setLocationFrom("IN2_EXIT");
         t2.setLocationTo("OUT3_ENTRY");
         t2.setPriority(2);
 
         InstructionExVO t3 = new InstructionExVO();
         t3.setInstructionCode("T003");
-        t3.setLocationFrom("G10");          // 灰点到灰点
+        t3.setLocationFrom("G10");
         t3.setLocationTo("G20");
         t3.setPriority(1);
 
@@ -633,7 +676,6 @@ public class InstructionServcieImpl implements InstructionServcie {
         list.add(t2);
         list.add(t3);
 
-        // 1) 打印路径展开测试
         System.out.println("== 路径展开 ==");
         for (InstructionExVO vo : list) {
             List<Seg> path = computePathSegments(vo.getLocationFrom(), vo.getLocationTo());
@@ -641,10 +683,8 @@ public class InstructionServcieImpl implements InstructionServcie {
             System.out.println("  段数=" + path.size() + "  详情=" + pathToString(path));
         }
 
-        // 2) 跑调度
         svc.schedule(list);
 
-        // 3) 打印调度顺序
         System.out.println("\n== 调度顺序（高分在前） ==");
         for (int i = 0; i < list.size(); i++) {
             InstructionExVO vo = list.get(i);
@@ -654,7 +694,6 @@ public class InstructionServcieImpl implements InstructionServcie {
         }
     }
 
-    /** 小工具：把段列表打印得更好看 */
     private static String pathToString(List<Seg> path) {
         if (path == null || path.isEmpty()) return "[]";
         StringBuilder sb = new StringBuilder("[");
@@ -667,10 +706,8 @@ public class InstructionServcieImpl implements InstructionServcie {
         return sb.toString();
     }
 
-    // ====================== 时间工具方法 ======================
     private static String ts() {
         LocalDateTime now = LocalDateTime.now();
         return now.format(DateTimeFormatter.ofPattern("yyyy-MM-dd HH:mm:ss"));
     }
-
 }
